<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartPage">


    <Button
        android:id="@+id/createButton"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/boxy_button"
        android:backgroundTint="#EFEFEF"
        android:elevation="6dp"
        android:fontFamily="sans-serif-condensed"
        android:shadowColor="#3E3E3E"
        android:text="@string/create_account"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="364dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/receipt_scanner2"
        android:textColor="#030D16"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/boxy_button"
        android:backgroundTint="#EFEFEF"
        android:elevation="6dp"
        android:fontFamily="sans-serif-condensed"
        android:shadowColor="#3E3E3E"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="259dp"
        android:layout_height="345dp"
        android:layout_marginTop="96dp"
        android:contentDescription="logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/receiptlogo" />
</androidx.constraintlayout.widget.ConstraintLayout>