<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Budget">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/budget"
        android:textColor="#202020"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/groceriesBtn"
        android:layout_width="356dp"
        android:layout_height="100dp"
        android:background="@drawable/boxy_button"
        android:backgroundTint="#D57979"
        android:textAllCaps="false"
        android:textColor="#EFE9E9"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/healthBtn"
        android:layout_width="358dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/boxy_button"
        android:backgroundTint="#A69C5C"
        android:textAllCaps="false"
        android:textColor="#EFE9E9"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/electronicsBtn"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/electronicsBtn"
        android:layout_width="358dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/boxy_button"
        android:backgroundTint="#616994"
        android:textAllCaps="false"
        android:textColor="#EFE9E9"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clothingBtn"
        app:layout_constraintVertical_bias="0.007"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clothingBtn"
        android:layout_width="358dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/boxy_button"
        android:textAllCaps="false"
        android:textColor="#EFE9E9"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groceriesBtn"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/homeBtn"
        android:layout_width="358dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/boxy_button"
        android:backgroundTint="#618781"
        android:textAllCaps="false"
        android:textColor="#EFE9E9"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/healthBtn"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enterBtn"
        android:layout_width="358dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/boxy_button"
        android:backgroundTint="#CE9177"
        android:textAllCaps="false"
        android:textColor="#EFE9E9"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeBtn"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="64dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <TextView
        android:id="@+id/categoriesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:elevation="10dp"
        android:text="@string/groceries"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/groceriesBtn"
        app:layout_constraintTop_toTopOf="@+id/groceriesBtn" />


    <TextView
        android:id="@+id/categoriesBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:elevation="10dp"
        android:text="@string/placeholdertext"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/groceriesBtn"
        app:layout_constraintEnd_toEndOf="@+id/groceriesBtn" />

    <TextView
        android:id="@+id/clothingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:elevation="10dp"
        android:text="@string/clothing"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/clothingBtn"
        app:layout_constraintTop_toTopOf="@+id/clothingBtn" />

    <TextView
        android:id="@+id/clothingBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:elevation="10dp"
        android:text="@string/placeholdertext"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/clothingBtn"
        app:layout_constraintEnd_toEndOf="@+id/clothingBtn" />

    <TextView
        android:id="@+id/electronicsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:elevation="10dp"
        android:text="@string/electronics"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/electronicsBtn"
        app:layout_constraintTop_toTopOf="@+id/electronicsBtn" />

    <TextView
        android:id="@+id/electronicsBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:elevation="10dp"
        android:text="@string/placeholdertext"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/electronicsBtn"
        app:layout_constraintEnd_toEndOf="@+id/electronicsBtn" />

    <TextView
        android:id="@+id/healthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:elevation="10dp"
        android:text="@string/health"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/healthBtn"
        app:layout_constraintTop_toTopOf="@+id/healthBtn" />

    <TextView
        android:id="@+id/healthBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:elevation="10dp"
        android:text="@string/placeholdertext"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/healthBtn"
        app:layout_constraintEnd_toEndOf="@+id/healthBtn" />

    <TextView
        android:id="@+id/homeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:elevation="10dp"
        android:text="@string/home"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/homeBtn"
        app:layout_constraintTop_toTopOf="@+id/homeBtn" />

    <TextView
        android:id="@+id/homeBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:elevation="10dp"
        android:text="@string/placeholdertext"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/homeBtn"
        app:layout_constraintEnd_toEndOf="@+id/homeBtn" />

    <TextView
        android:id="@+id/enterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:elevation="10dp"
        android:text="@string/entertainment"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/enterBtn"
        app:layout_constraintTop_toTopOf="@+id/enterBtn" />

    <TextView
        android:id="@+id/enterBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:elevation="10dp"
        android:text="@string/placeholdertext"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/enterBtn"
        app:layout_constraintEnd_toEndOf="@+id/enterBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>